--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -136,7 +136,7 @@
           </div>
           <div class="col-lg-6">
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Subscríbete">
             </form>
           </div>
         </div>
